indent-dedent/SimpleParser.py
# Generated from Simple.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleParser ( Parser ):

    grammarFileName = "Simple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "','", "':'", "'rounds do'", "'>='", 
                     "'<='", "'patch'", "'include'", "'block'", "'subblock'", 
                     "'::'", "<INVALID>", "'if'", "'elif'", "'else'", "'for'", 
                     "'thisround'", "'break'", "'continue'", "'pass'", "'end'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", 
                     "'=='", "'!='", "'+'", "'-'", "'**'", "'*'", "'/'", 
                     "'%'", "'||'", "'&&'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PATCH", "INCLUDE", 
                      "BLOCK", "SUBBLOCK", "CONNECT", "DISCONNECT", "IF", 
                      "ELIF", "ELSE", "FOR", "THISROUND", "BREAK", "CONTINUE", 
                      "PASS", "END", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
                      "L_BRACKET", "R_BRACKET", "L_ANGLE", "R_ANGLE", "EQ", 
                      "NOT_EQ", "PLUS", "MINUS", "POW", "STAR", "DIV", "MOD", 
                      "OR", "AND", "NODETYPE", "PARAMETERS", "SINGLE_PARAM", 
                      "ID", "STRING", "NUMBER", "INTEGER", "FLOAT", "LIST", 
                      "NL", "WS", "COMMENT", "INDENT", "DEDENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_declarationstmt = 2
    RULE_connectionstmt = 3
    RULE_ifstmt = 4
    RULE_forstmt = 5
    RULE_subblockstmt = 6
    RULE_suite = 7
    RULE_expr = 8

    ruleNames =  [ "prog", "stmt", "declarationstmt", "connectionstmt", 
                   "ifstmt", "forstmt", "subblockstmt", "suite", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    PATCH=7
    INCLUDE=8
    BLOCK=9
    SUBBLOCK=10
    CONNECT=11
    DISCONNECT=12
    IF=13
    ELIF=14
    ELSE=15
    FOR=16
    THISROUND=17
    BREAK=18
    CONTINUE=19
    PASS=20
    END=21
    L_PAREN=22
    R_PAREN=23
    L_CURLY=24
    R_CURLY=25
    L_BRACKET=26
    R_BRACKET=27
    L_ANGLE=28
    R_ANGLE=29
    EQ=30
    NOT_EQ=31
    PLUS=32
    MINUS=33
    POW=34
    STAR=35
    DIV=36
    MOD=37
    OR=38
    AND=39
    NODETYPE=40
    PARAMETERS=41
    SINGLE_PARAM=42
    ID=43
    STRING=44
    NUMBER=45
    INTEGER=46
    FLOAT=47
    LIST=48
    NL=49
    WS=50
    COMMENT=51
    INDENT=52
    DEDENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(SimpleParser.PATCH, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.ID)
            else:
                return self.getToken(SimpleParser.ID, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NL)
            else:
                return self.getToken(SimpleParser.NL, i)

        def INCLUDE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.INCLUDE)
            else:
                return self.getToken(SimpleParser.INCLUDE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = SimpleParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 18
                self.match(SimpleParser.INCLUDE)
                self.state = 19
                self.match(SimpleParser.ID)
                self.state = 20
                self.match(SimpleParser.NL)
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(SimpleParser.PATCH)
            self.state = 27
            self.match(SimpleParser.ID)
            self.state = 28
            self.match(SimpleParser.NL)
            self.state = 30 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 29
                self.stmt()
                self.state = 32 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 577243874927104) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(SimpleParser.BLOCK, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def L_CURLY(self):
            return self.getToken(SimpleParser.L_CURLY, 0)

        def NL(self):
            return self.getToken(SimpleParser.NL, 0)

        def R_CURLY(self):
            return self.getToken(SimpleParser.R_CURLY, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def subblockstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.SubblockstmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.SubblockstmtContext,i)


        def declarationstmt(self):
            return self.getTypedRuleContext(SimpleParser.DeclarationstmtContext,0)


        def connectionstmt(self):
            return self.getTypedRuleContext(SimpleParser.ConnectionstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(SimpleParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(SimpleParser.ForstmtContext,0)


        def BREAK(self):
            return self.getToken(SimpleParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(SimpleParser.CONTINUE, 0)

        def PASS(self):
            return self.getToken(SimpleParser.PASS, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = SimpleParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(SimpleParser.BLOCK)
                self.state = 35
                self.match(SimpleParser.ID)
                self.state = 36
                self.match(SimpleParser.L_CURLY)
                self.state = 37
                self.match(SimpleParser.NL)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 577243874928128) != 0:
                    self.state = 40
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [9, 13, 16, 18, 19, 20, 28, 40, 42, 43, 49]:
                        self.state = 38
                        self.stmt()
                        pass
                    elif token in [10]:
                        self.state = 39
                        self.subblockstmt()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 45
                self.match(SimpleParser.R_CURLY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.declarationstmt()
                self.state = 47
                self.match(SimpleParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.connectionstmt()
                self.state = 50
                self.match(SimpleParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.ifstmt()
                self.state = 53
                self.match(SimpleParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.forstmt()
                self.state = 56
                self.match(SimpleParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 58
                self.match(SimpleParser.BREAK)
                self.state = 59
                self.match(SimpleParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.match(SimpleParser.CONTINUE)
                self.state = 61
                self.match(SimpleParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 62
                self.match(SimpleParser.PASS)
                self.state = 63
                self.match(SimpleParser.NL)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 64
                self.match(SimpleParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_PARAM(self):
            return self.getToken(SimpleParser.SINGLE_PARAM, 0)

        def STRING(self):
            return self.getToken(SimpleParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(SimpleParser.NUMBER, 0)

        def expr(self):
            return self.getTypedRuleContext(SimpleParser.ExprContext,0)


        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def NODETYPE(self):
            return self.getToken(SimpleParser.NODETYPE, 0)

        def PARAMETERS(self):
            return self.getToken(SimpleParser.PARAMETERS, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_declarationstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationstmt" ):
                listener.enterDeclarationstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationstmt" ):
                listener.exitDeclarationstmt(self)




    def declarationstmt(self):

        localctx = SimpleParser.DeclarationstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarationstmt)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(SimpleParser.SINGLE_PARAM)
                self.state = 68
                self.match(SimpleParser.T__0)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 69
                    self.match(SimpleParser.STRING)
                    pass

                elif la_ == 2:
                    self.state = 70
                    self.match(SimpleParser.NUMBER)
                    pass

                elif la_ == 3:
                    self.state = 71
                    self.expr(0)
                    pass


                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(SimpleParser.ID)
                self.state = 75
                self.match(SimpleParser.T__0)
                self.state = 76
                self.match(SimpleParser.NODETYPE)
                self.state = 77
                self.match(SimpleParser.PARAMETERS)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(SimpleParser.NODETYPE)
                self.state = 79
                self.match(SimpleParser.PARAMETERS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectionstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_ANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.L_ANGLE)
            else:
                return self.getToken(SimpleParser.L_ANGLE, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.ID)
            else:
                return self.getToken(SimpleParser.ID, i)

        def R_ANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.R_ANGLE)
            else:
                return self.getToken(SimpleParser.R_ANGLE, i)

        def CONNECT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.CONNECT)
            else:
                return self.getToken(SimpleParser.CONNECT, i)

        def DISCONNECT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.DISCONNECT)
            else:
                return self.getToken(SimpleParser.DISCONNECT, i)

        def getRuleIndex(self):
            return SimpleParser.RULE_connectionstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnectionstmt" ):
                listener.enterConnectionstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnectionstmt" ):
                listener.exitConnectionstmt(self)




    def connectionstmt(self):

        localctx = SimpleParser.ConnectionstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_connectionstmt)
        self._la = 0 # Token type
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [28]:
                    self.state = 82
                    self.match(SimpleParser.L_ANGLE)
                    self.state = 83
                    self.match(SimpleParser.ID)
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==2:
                        self.state = 84
                        self.match(SimpleParser.T__1)
                        self.state = 85
                        self.match(SimpleParser.ID)
                        self.state = 90
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 91
                    self.match(SimpleParser.R_ANGLE)
                    pass
                elif token in [43]:
                    self.state = 92
                    self.match(SimpleParser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 95
                    self.match(SimpleParser.CONNECT)
                    self.state = 107
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [28]:
                        self.state = 96
                        self.match(SimpleParser.L_ANGLE)
                        self.state = 97
                        self.match(SimpleParser.ID)
                        self.state = 102
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==2:
                            self.state = 98
                            self.match(SimpleParser.T__1)
                            self.state = 99
                            self.match(SimpleParser.ID)
                            self.state = 104
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 105
                        self.match(SimpleParser.R_ANGLE)
                        pass
                    elif token in [43]:
                        self.state = 106
                        self.match(SimpleParser.ID)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 111 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==11):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [28]:
                    self.state = 113
                    self.match(SimpleParser.L_ANGLE)
                    self.state = 114
                    self.match(SimpleParser.ID)
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==2:
                        self.state = 115
                        self.match(SimpleParser.T__1)
                        self.state = 116
                        self.match(SimpleParser.ID)
                        self.state = 121
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 122
                    self.match(SimpleParser.R_ANGLE)
                    pass
                elif token in [43]:
                    self.state = 123
                    self.match(SimpleParser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 126
                    self.match(SimpleParser.DISCONNECT)
                    self.state = 138
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [28]:
                        self.state = 127
                        self.match(SimpleParser.L_ANGLE)
                        self.state = 128
                        self.match(SimpleParser.ID)
                        self.state = 133
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==2:
                            self.state = 129
                            self.match(SimpleParser.T__1)
                            self.state = 130
                            self.match(SimpleParser.ID)
                            self.state = 135
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 136
                        self.match(SimpleParser.R_ANGLE)
                        pass
                    elif token in [43]:
                        self.state = 137
                        self.match(SimpleParser.ID)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 142 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SimpleParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.ExprContext,i)


        def suite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.SuiteContext)
            else:
                return self.getTypedRuleContext(SimpleParser.SuiteContext,i)


        def END(self):
            return self.getToken(SimpleParser.END, 0)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.ELIF)
            else:
                return self.getToken(SimpleParser.ELIF, i)

        def ELSE(self):
            return self.getToken(SimpleParser.ELSE, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_ifstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)




    def ifstmt(self):

        localctx = SimpleParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SimpleParser.IF)
            self.state = 147
            self.expr(0)
            self.state = 148
            self.match(SimpleParser.T__2)
            self.state = 149
            self.suite()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 150
                self.match(SimpleParser.ELIF)
                self.state = 151
                self.expr(0)
                self.state = 152
                self.match(SimpleParser.T__2)
                self.state = 153
                self.suite()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 160
                self.match(SimpleParser.ELSE)
                self.state = 161
                self.match(SimpleParser.T__2)
                self.state = 162
                self.suite()


            self.state = 165
            self.match(SimpleParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SimpleParser.FOR, 0)

        def INTEGER(self):
            return self.getToken(SimpleParser.INTEGER, 0)

        def NL(self):
            return self.getToken(SimpleParser.NL, 0)

        def END(self):
            return self.getToken(SimpleParser.END, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_forstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForstmt" ):
                listener.enterForstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForstmt" ):
                listener.exitForstmt(self)




    def forstmt(self):

        localctx = SimpleParser.ForstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(SimpleParser.FOR)
            self.state = 168
            self.match(SimpleParser.INTEGER)
            self.state = 169
            self.match(SimpleParser.T__3)
            self.state = 170
            self.match(SimpleParser.T__2)
            self.state = 171
            self.match(SimpleParser.NL)
            self.state = 173 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 172
                self.stmt()
                self.state = 175 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 577243874927104) != 0):
                    break

            self.state = 177
            self.match(SimpleParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubblockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBBLOCK(self):
            return self.getToken(SimpleParser.SUBBLOCK, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def L_CURLY(self):
            return self.getToken(SimpleParser.L_CURLY, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NL)
            else:
                return self.getToken(SimpleParser.NL, i)

        def R_CURLY(self):
            return self.getToken(SimpleParser.R_CURLY, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_subblockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubblockstmt" ):
                listener.enterSubblockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubblockstmt" ):
                listener.exitSubblockstmt(self)




    def subblockstmt(self):

        localctx = SimpleParser.SubblockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subblockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(SimpleParser.SUBBLOCK)
            self.state = 180
            self.match(SimpleParser.ID)
            self.state = 181
            self.match(SimpleParser.L_CURLY)
            self.state = 182
            self.match(SimpleParser.NL)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 577243874927104) != 0:
                self.state = 183
                self.stmt()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 189
            self.match(SimpleParser.R_CURLY)
            self.state = 190
            self.match(SimpleParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(SimpleParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(SimpleParser.DEDENT, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = SimpleParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(SimpleParser.INDENT)
            self.state = 194 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 193
                self.stmt()
                self.state = 196 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 577243874927104) != 0):
                    break

            self.state = 198
            self.match(SimpleParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SimpleParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(SimpleParser.STRING, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def L_PAREN(self):
            return self.getToken(SimpleParser.L_PAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.ExprContext,i)

